CHANGES
=======

* fix metric labels
* travis
* readme
* initial version based on openstack-watcher
* Initial commit